apps/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: loki
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: api
    - name: console
      port: 9001
      targetPort: console
